<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sign_in_bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dorachat_main_content_top_margin"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical"
                android:background="@drawable/shape_sign_in_card">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="36dp"
                    android:text="@string/sign_in"
                    android:textSize="@dimen/dorachat_sign_in_text_size"
                    android:textStyle="bold"
                    android:textColor="@color/dorachat_text_primary"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="36dp"
                    android:text="@string/password"
                    android:textSize="@dimen/dorachat_password_text_size"
                    android:textColor="@color/dorachat_text_secondary"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dorachat_input_height"
                    android:layout_marginTop="@dimen/dorachat_input_password_top_margin"
                    android:layout_marginHorizontal="36dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/dorachat_text_primary"
                    android:padding="@dimen/dorachat_input_padding"
                    android:maxLength="16"
                    android:inputType="textPassword"
                    android:background="@drawable/shape_sign_in_input_bg"/>
                <Button
                    android:id="@+id/btn_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dorachat_input_height"
                    android:layout_marginTop="50dp"
                    android:layout_marginHorizontal="36dp"
                    android:text="@string/sign_in_button"
                    android:textSize="@dimen/dorachat_sign_in_btn_text_size"
                    android:textColor="@color/white"
                    android:background="@drawable/shape_sign_in_btn_bg"/>
                <TextView
                    android:id="@+id/tv_forget_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginVertical="40dp"
                    android:text="@string/forget_your_password"
                    android:textSize="@dimen/dorachat_forget_password_text_size"
                    android:textColor="@color/dorachat_text_primary"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_sign_in_card_bottom"
                android:layout_marginHorizontal="29dp">
                <TextView
                    android:id="@+id/tv_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginVertical="30dp"
                    android:textSize="@dimen/dorachat_sign_up_text_size"
                    android:textColor="@color/dorachat_text_secondary"/>
            </RelativeLayout>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dorachat_back_btn_icon_size"
            android:layout_height="@dimen/dorachat_back_btn_icon_size"
            android:layout_gravity="top|start"
            android:layout_marginStart="@dimen/dorachat_back_btn_start_margin"
            android:layout_marginTop="@dimen/dorachat_brand_top_margin"
            android:src="@drawable/ic_sign_in_back"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:textColor="@color/dorachat_text_brand"
            android:text="@string/powered_by_dora_chat"
            android:visibility="gone"
            android:layout_marginEnd="@dimen/dorachat_brand_end_margin"
            android:layout_marginTop="@dimen/dorachat_brand_top_margin"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_connect_wallet"
            android:layout_width="@dimen/dorachat_wallet_connect_icon_size"
            android:layout_height="@dimen/dorachat_wallet_connect_icon_size"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="@dimen/dorachat_wallet_connect_bottom_margin"
            android:src="@drawable/ic_wallet_connect"/>
    </FrameLayout>
</layout>